# social-tui

./: .env.example  .gitignore  AGENTS.md  KITTY_IMAGES.md  MEDIA_CACHE_QUICKSTART.md  MEDIA_IMPORT_QUICKSTART.md  MIGRATION_COMPLETE.md  README.md  README_database.md  README_substack.md  SETUP.md  SUPABASE_MIGRATION_PLAN.md  backfill_media.py  com.socialtui.updatedata.plist  fix_postmedia_ids.py  interactive_posts.py  interactive_youtube.py  manage_data.py  manage_scheduler.sh  media_cache.py  migrate_database.py  migrate_historical_runs.py  profile_manager.py  profile_ui.py  pyproject.toml  rename_bin_files.py  run_apify.sh  show_posts.py  substack_analytics_fetcher.py  supabase_client.py  tag_manager.py  test_icat.py  test_kitty_image.py  update_data.py  update_youtube_stats.py  verify_media_schema.py  websocket_server.py  youtube_fetcher.py
archive/: link_supabase.sh  migrate_data.py  migrate_schema.py  verify_migration.py
scripts/s3_upload/: diagnose_missing_media.py
specs/: DISPLAY_RUN_INFORMATION.md  action-queue.md  database.md  improve-filtering.md  media_handling.md  offline-get-artifacts.md  phase1_completion_summary.md  phase2_completion_summary.md  phase3_completion_summary.md  supabase_migration.md  youtube-follow.md
specs/completed/: supabase-security-fixes.md
supabase/: config.toml
supabase/migrations/: 20251130223349_create_schema.sql  20251201000000_fix_virtual_zero_point_to_use_posted_at.sql  20251201000100_fix_virtual_zero_point_min_time.sql  20251201123623_add_media_tracking_columns.sql  (+2 more)
web_visualization/: app.js  index.html
